[gd_scene load_steps=2 format=3 uid="uid://e3l6n8o0q5rst"]

[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id="1_game_over"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_over")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SCORE: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ContinueLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PRESS SPACE TO CONTINUE"
horizontal_alignment = 1

[node name="ReturnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="ReturnTimer" to="." method="_on_return_timer_timeout"]
